# agent_monitor_math

./: .env.example  .gitignore  ATTRIBUTION.md  README.md  cluster_process_explore.py  pyproject.toml  setup.sh  start.sh
agent_monitor/: __init__.py  cli.py  cli_events.py  console_server.py  engines_registry.py  jobs.py  library.py  paths.py  schema.py  server.py  settings.py
agent_monitor/builders/: hermes_builder.py
agent_monitor/runners/: _stream.py  deepagents_runner.py  hermes.py  improof.py  metaharness_runner.py  plain_runner.py  ucla.py
agent_monitor/web/: console.html
engines/hermes_core/: README.md  model_tools.py
engines/improof/: README.AGENT_MONITOR.md  README.monitor.md
engines/ucla/: README.md  deep_read.py  finalize.py  harness_0518_Final.py  http_utils.py  literature_research.py  run_parallel_harness.py
monitor_core/harness_dashboard/: __init__.py  analysis.py  artifact_builder.py  build.py  cli.py  improofbench_builder.py  latex_provenance.py  log_parser.py  parse.py  server.py  ucla_memory.py
monitor_core/llm_cost_tracker/: __init__.py  metrics.py  pricing.py
problems/: manifest.json
problems/ucla/: [Amit]new_problem.txt  [Amit]random_lift_expansion.txt  [First_Proof]Example_problem[Correct].txt  [Terry]flat_eigenvector.txt  [Terry]generalized_vandermonde.txt  [Terry]gilbreath_model.txt  [Terry]hadamard_power_bound.txt  [Terry]prime_dilation.txt  [Terry]residue_progressions.txt  [Terry]spherical_rectangles.txt  [Terry]wasserstein_codimension.txt  [Terry_Xinjie]new_problem.txt  [Xinjie]gaussian_comparison.txt  (+1 more)
(+65 files in other folders)
